--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -125,32 +125,19 @@
   {emoji:'🧮', pl:'Liczydło', en:'Abacus', others:['abacus tool', 'abacus device', 'liczydlo']},
   {emoji:'⚖️', pl:'Waga', en:'Scale', others:['scail', 'balance scale', 'waga']},
   {emoji:'🛒', pl:'Wuzek na Zakupy', en:'Shopping Cart', others:['shoping cart', 'trolley', 'wuzek na zakupy']},
-  {emoji:'🛍️', pl:'Torby na Zakupy', en:'Shopping Bags', others:['shoping bags', 'carry bags', 'torby na zakupy', 'bag', 'bags']},
-  {emoji:'🕯️', pl:'Świeczka', en:'Candle', others:['canddle', 'wax candle', 'swieczka']},
-  {emoji:'💡', pl:'Żarówka', en:'Light Bulb', others:['lightbulb', 'bulb lamp', 'zarowka', 'bulb']},
-  {emoji:'🔦', pl:'Latarka', en:'Flashlight', others:['flashlite', 'torch', 'latarka']},
   {emoji:'🏮', pl:'Lampion', en:'Lantern', others:['paper lamp', 'light lantern', 'Laterne']},
-  {emoji:'🧱', pl:'Cegła', en:'Brick', others:['stone block', 'building brick', 'Ziegel']},
-  {emoji:'🪠', pl:'Przepychacz do Rur', en:'Plunger', others:['toilet plunger', 'pipe cleaner', 'Pömpel']},
-  {emoji:'🧸', pl:'Pluszowy Miś', en:'Teddy Bear', others:['stuffed bear', 'plush toy', 'Teddybär']},
   {emoji:'🧷', pl:'Agrafka', en:'Safety Pin', others:['pin', 'metal clasp', 'Sicherheitsnadel']},
   {emoji:'🪢', pl:'Węzeł', en:'Knot', others:['rope tie', 'loop knot', 'Knoten']},
   {emoji:'🧹', pl:'Miotła', en:'Broom', others:['brush', 'sweeper', 'Besen']},
   {emoji:'🪒', pl:'Maszynka do Golenia', en:'Razor', others:['shaver', 'blade', 'Rasierer']},
-  {emoji:'🩲', pl:'Majtki', en:'Underwear', others:['briefs', 'panties', 'Unterhose']},
   {emoji:'🥼', pl:'Fartuch', en:'Apron', others:['white coat', 'Lab Coat', 'Kittel']},
   {emoji:'🦺', pl:'Kamizelka Odblaskowa', en:'Safety Vest', others:['reflective vest', 'work vest', 'Warnweste']},
-  {emoji:'🎓', pl:'Czapka Dyplomowa', en:'Graduation Cap', others:['mortarboard', 'academic cap', 'Absolventenhut', 'cap']},
-  {emoji:'👑', pl:'Korona', en:'Crown', others:['tiara', 'royal crown', 'Krone']},
-  {emoji:'💍', pl:'Pierścionek', en:'Ring', others:['wedding ring', 'band', 'Ring']},
   {emoji:'💄', pl:'Szminka', en:'Lipstick', others:['makeup', 'lip color', 'Lippenstift']},
   {emoji:'🎒', pl:'Plecak', en:'Backpack', others:['rucksack', 'school bag', 'Rucksack']},
   {emoji:'👝', pl:'Piórnik', en:'Pouch', others:['pencil case', 'small bag', 'Federmäppchen']},
   {emoji:'👛', pl:'Portmonetka', en:'Purse', others:['coin purse', 'wallet', 'Geldbörse']},
   {emoji:'👜', pl:'Torebka', en:'Handbag', others:['pocketbook', 'bag', 'Handtasche']},
   {emoji:'🩴', pl:'Japonki', en:'Flip-Flops', others:['sandals', 'slippers', 'Flip-Flops', 'flip flops']},
-  {emoji:'👠', pl:'Szpilki', en:'High Heels', others:['stilettos', 'heels', 'High Heels']},
-  {emoji:'👟', pl:'But', en:'Sneaker', others:['running shoe', 'trainer', 'Turnschuh']},
   {emoji:'🦯', pl:'Laska', en:'Cane', others:['walking stick', 'staff', 'Gehstock']}
      ],
      medium:[
@@ -168,13 +155,26 @@
   {emoji:'👖', pl:'Spodnie', en:'Pants', others:['trousers', 'jeans', 'Hose']},
   {emoji:'🎽', pl:'Koszulka bez Rękawów', en:'Tank Top', others:['jersey', 'sleeveless shirt', 'Trikot']},
   {emoji:'👔', pl:'Krawat', en:'Tie', others:['necktie', 'cravat', 'Krawatte', 'suit']},
-  {emoji:'👗', pl:'Sukienka', en:'Dress', others:['gown', 'frock', 'Kleid']},
   {emoji:'🩳', pl:'Kąpielówki', en:'Shorts', others:['swim trunks', 'swim shorts', 'Badehose']},
-  {emoji:'🕶️', pl:'Okulary Przeciwsłoneczne', en:'Sunglasses', others:['shades', 'dark glasses', 'Sonnenbrille']},
   {emoji:'🥽', pl:'Gogle', en:'Goggles', others:['protective glasses', 'safety goggles', 'Schutzbrille']},
-  {emoji:'👒', pl:'Kapelusz', en:'Hat', others:['sunhat', 'wide-brim hat', 'Hut']}
      ],
      hard:[
+  {emoji:'👗', pl:'Sukienka', en:'Dress', others:['gown', 'frock', 'Kleid']},
+  {emoji:'🕶️', pl:'Okulary Przeciwsłoneczne', en:'Sunglasses', others:['shades', 'dark glasses', 'Sonnenbrille']},
+  {emoji:'👒', pl:'Kapelusz', en:'Hat', others:['sunhat', 'wide-brim hat', 'Hut']},
+  {emoji:'🛍️', pl:'Torby na Zakupy', en:'Shopping Bags', others:['shoping bags', 'carry bags', 'torby na zakupy', 'bag', 'bags']},
+  {emoji:'💡', pl:'Żarówka', en:'Light Bulb', others:['lightbulb', 'bulb lamp', 'zarowka', 'bulb']},
+  {emoji:'🔦', pl:'Latarka', en:'Flashlight', others:['flashlite', 'torch', 'latarka']},
+  {emoji:'🧱', pl:'Cegła', en:'Brick', others:['stone block', 'building brick', 'Ziegel']},
+  {emoji:'🪠', pl:'Przepychacz do Rur', en:'Plunger', others:['toilet plunger', 'pipe cleaner', 'Pömpel']},
+  {emoji:'🧸', pl:'Pluszowy Miś', en:'Teddy Bear', others:['stuffed bear', 'plush toy', 'Teddybär']},
+  {emoji:'🩲', pl:'Majtki', en:'Underwear', others:['briefs', 'panties', 'Unterhose']},
+  {emoji:'🎓', pl:'Czapka Dyplomowa', en:'Graduation Cap', others:['mortarboard', 'academic cap', 'Absolventenhut', 'cap']},
+  {emoji:'👑', pl:'Korona', en:'Crown', others:['tiara', 'royal crown', 'Krone']},
+  {emoji:'💍', pl:'Pierścionek', en:'Ring', others:['wedding ring', 'band', 'Ring']},
+  {emoji:'👠', pl:'Szpilki', en:'High Heels', others:['stilettos', 'heels', 'High Heels']},
+  {emoji:'👟', pl:'But', en:'Sneaker', others:['running shoe', 'trainer', 'Turnschuh']},
+  {emoji:'🕯️', pl:'Świeczka', en:'Candle', others:['canddle', 'wax candle', 'swieczka']},
   {emoji:'👓', pl:'Okulary', en:'Glasses', others:['spectacles', 'eyewear', 'Brille']},
   {emoji:'🧢', pl:'Czapka', en:'Cap', others:['baseball cap', 'snapback', 'Mütze']},
   {emoji:'⛑️', pl:'Hełm Strażacki', en:'Rescue Helmet', others:['fire helmet', 'safety helmet', 'Rettungshelm', 'helmet']},
@@ -715,7 +715,7 @@
   {emoji:'🐶', pl:'Pies', en:'Dog', others:['dogg', 'puppy', 'pies']},
   {emoji:'🐺', pl:'Wilk', en:'Wolf', others:['wolff', 'wild wolf', 'wilk']},
   {emoji:'🐻', pl:'Niedźwiedź', en:'Bear', others:['ber', 'grizzly', 'niedziedz']},
-  {emoji:'🐻‍❄️', pl:'Niedźwiedź Polarny', en:'Polar Bear', others:['polarbeer', 'white bear', 'niedziedz polarny']},
+  {emoji:'🐻‍❄️', pl:'Niedźwiedź Polarny', en:'Polar Bear', others:['polarbeer', 'white bear', 'niedziedz polarny', 'bear']},
   {emoji:'🐨', pl:'Koala', en:'Koala', others:['koalaa', 'koala bear', 'koala']},
   {emoji:'🐼', pl:'Panda', en:'Panda', others:['padaa', 'giant panda', 'panda']},
   {emoji:'🐰', pl:'Królik', en:'Rabbit', others:['rabitt', 'bunny', 'krolik']},
@@ -737,10 +737,10 @@
   {emoji:'🐀', pl:'Szczur', en:'Rat', others:['ratt', 'big rat', 'szczur']},
   {emoji:'🐂', pl:'Byk', en:'Bull', others:['bul', 'strong bull', 'byk']},
   {emoji:'🐹', pl:'Chomik', en:'Hamster', others:['hamstor', 'cute hamster', 'chomik']},
-  {emoji:'🧑‍🦯', pl:'Osoba Niewidoma', en:'Blind Person', others:['visually impaired', 'blind man', 'niewidoma']},
+  {emoji:'🧑‍🦯', pl:'Osoba Niewidoma', en:'Blind Person', others:['visually impaired', 'blind man', 'niewidoma', 'blind']},
   {emoji:'🤵', pl:'Pan Młody', en:'Groom', others:['groomm', 'bridegroom', 'pan mlody']},
   {emoji:'👰', pl:'Panna Młoda', en:'Bride', others:['bridde', 'wedding bride', 'panna mloda']},
-  {emoji:'🧑‍🦲', pl:'Osoba Łysa', en:'Bald Person', others:['baldy', 'hairless', 'osoba lysa']}
+  {emoji:'🧑‍🦲', pl:'Osoba Łysa', en:'Bald Person', others:['baldy', 'hairless', 'osoba lysa', 'bald']}
      ]
     };
 
