--- a/20250908_pozytywizm.html
+++ b/20250908_pozytywizm.html
@@ -27,11 +27,11 @@
     .card{flex:0 0 100%; padding:18px; border-radius:16px; background:var(--card); box-shadow:0 8px 30px rgba(14,34,34,0.06); border:1px solid rgba(0,0,0,0.03)}
 
     .lesson-head{display:flex; justify-content:space-between; align-items:center}
-    .lesson-title{font-size:18px; font-weight:700; font-family: 'Merriweather', serif}
-    .lesson-sub{font-size:13px; color:var(--muted)}
-    .topic{font-size:16px; margin-top:8px; text-decoration:underline; font-weight:600}
-    .note{margin-top:10px; line-height:1.5; font-size:15px}
-    .lesson-foot{margin-top:14px; color:var(--muted); font-size:13px; display:flex; justify-content:space-between; align-items:center}
+    .lesson-title{font-size:20px; font-weight:700; font-family: 'Merriweather', serif}
+    .lesson-sub{font-size:15px; color:var(--muted)}
+    .topic{font-size:18px; margin-top:8px; text-decoration:underline; font-weight:600}
+    .note{margin-top:10px; line-height:1.5; font-size:17px}
+    .lesson-foot{margin-top:14px; color:var(--muted); font-size:15px; display:flex; justify-content:space-between; align-items:center}
 
     .note ol{padding-left:20px; margin:8px 0}
     .note > ol > li {
@@ -94,7 +94,6 @@
       w II połowie XIX wieku. Nazwa epoki została przyjęta od kierunku filozoficznego, 
       a główne hasło epoki to: <em>„Wiedzieć, aby przewidywać, aby móc”</em>.
     </li>
-
     <li>
       <strong>Czas trwania epoki:</strong>
       <ol type="a">
@@ -102,7 +101,6 @@
         <li>Koniec: lata 1890–1895 – pojawienie się nowego pokolenia artystów.</li>
       </ol>
     </li>
-
     <li>
       <strong>Podstawowe kierunki w sztuce pozytywizmu:</strong>
       <ol type="a">
@@ -117,7 +115,6 @@
         </li>
       </ol>
     </li>
-
     <li>
       <strong>Podstawowe społeczne hasła pozytywizmu:</strong>
       <ol type="a">
@@ -143,7 +140,6 @@
         </li>
       </ol>
     </li>
-
     <li>
       <strong>Filozofie pozytywistyczne:</strong>
       <ol type="a">
@@ -157,22 +153,47 @@
           twierdził, że tak jak człowiek rozwija się i doskonali, 
           tak dzięki niemu rozwija się również całe społeczeństwo – twórca organicyzmu.
         </li>
+        <li>
+          <strong>Hipolit Taine – twórca utylitaryzmu</strong>
+          Według tego poglądu wszystko, co tworzy człowiek, nawet dzieło sztuki,
+          powinno być użyteczne dla drugiego człowieka, czyli mieć znaczenie społeczne. <br>
+          <strong>Utylitaryzm = użyteczność.</strong>
+        </li>
       </ol>
+    </li>
+    <li>
+      <strong>Życie codzienne i wynalazki w II połowie XIX wieku</strong>
+        <ul>
+          <li>Nastąpiła masowa migracja ludności do miast.</li>
+          <li>Pojawiły się nowe wynalazki ułatwiające życie: lampy gazowe, telegraf, telefon.</li>
+          <li>Popularne stały się nowe sposoby spędzania czasu, np. chodzenie do teatru, kawiarni, czytanie gazet.</li>
+          <li>Prasa rozwijała się dzięki codziennym dziennikom, tygodnikom i dwutygodnikom.</li>
+          <li>Powstały nowe formy publicystyki: felieton, kronika tygodniowa, reportaż podróżniczy.</li>
+          <li>W gazetach drukowano w odcinkach najbardziej znane powieści, np. <em>Lalkę</em> Bolesława Prusa.</li>
+          <li>Rozwijała się medycyna: Ludwik Pasteur opracował szczepionkę przeciw wściekliźnie,
+              a Maria Skłodowska-Curie odkryła promieniotwórczość.</li>
+        </ul>
+    </li>
+    <li>
+      <strong>Ubiór w II połowie XIX wieku</strong>
+        <ul>
+          <li><strong>Mężczyźni:</strong> garnitur, koszula, kamizelka, krawat, płaszcz, kapelusz.</li>
+          <li><strong>Kobiety:</strong> gorsety, krynoliny, długie suknie, kapelusze ozdobione piórami lub woalką.</li>
+          <li>Moda coraz bardziej podkreślała różnice między strojami damskimi i męskimi,
+              a ubiór stawał się także wyznacznikiem statusu społecznego.</li>
+        </ul>
     </li>
   </ol>
         `
       },
       {
-        category: 'Moje,Zeszyt',
-        date: '2025-09-07',
-        topic: 'Przedstawiciele pozytywizmu',
+        category: 'Zeszyt, Lekcje',
+        date: '2025-09-09',
+        topic: 'Problem antysemityzmu w literaturze II połowy XIX w.',
         note: `
-          <p>Wybrani twórcy:</p>
-          <ul>
-            <li><b>Eliza Orzeszkowa</b> — "Marta" (tematy społeczne)</li>
-            <li><b>Bolesław Prus</b> — "Lalka" (analiza społeczeństwa)</li>
-            <li><b>Maria Konopnicka</b> — liryka i tematy społeczne</li>
-          </ul>
+  <ol>
+    <li><strong>Pojęcia:</strong></li>
+  </ol>
         `
       },
       {
