--- a/20250910_szyfrcezara2.html
+++ b/20250910_szyfrcezara2.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Szyfr Cezara — wersja obiektowa</title>
+  <title>Szyfr Cezara — wersja obiektowa + Python</title>
   <style>
     :root {
       --bg: #f4f6fb;
@@ -27,7 +27,7 @@
     .card {
       background: var(--card);
       width: 100%;
-      max-width: 820px;
+      max-width: 900px;
       border-radius: var(--radius);
       box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
       padding: 26px;
@@ -45,6 +45,16 @@
     p.lead {
       margin: 0 0 18px;
       color: var(--muted);
+    }
+    pre {
+      background: #f3f4f6;
+      padding: 12px;
+      border-radius: 10px;
+      overflow-x: auto;
+      font-size: 13px;
+      color: #111827;
+      line-height: 1.5;
+      margin-top: 20px;
     }
     .row {
       display: flex;
@@ -119,8 +129,8 @@
 </head>
 <body>
   <main class="card">
-    <h1>Szyfr Cezara (OOP)</h1>
-    <p class="lead">Podaj tekst, wybierz przesunięcie i zaszyfruj/odszyfruj. Litery są szyfrowane, spacje i znaki specjalne zostają.</p><div class="row">
+    <h1>Szyfr Cezara (OOP w JS + Python)</h1>
+    <p class="lead">Podaj tekst, wybierz przesunięcie i zaszyfruj/odszyfruj. Litery są szyfrowane, spacje i znaki specjalne zostają. Poniżej znajdziesz też przykładową implementację w Pythonie.</p><div class="row">
   <div class="col">
     <label for="inputText">Tekst wejściowy</label>
     <textarea id="inputText" placeholder="Wpisz tekst...">ala ma kota</textarea>
@@ -151,7 +161,20 @@
   <p class="hint">Uwaga: przesunięcie większe niż 25 zostanie zredukowane modulo 26.</p>
 </div>
 
-<footer>Przykład obiektowej implementacji szyfru Cezara</footer>
+<h2>Przykładowy kod w Pythonie</h2>
+<pre>
+
+def szyfruj_cezara(tekst, klucz): zaszyfrowany_tekst = "" for litera in tekst: if 'a' <= litera <= 'z': start = ord('a') nowa_pozycja = (ord(litera) - start + klucz) % 26 zaszyfrowany_tekst += chr(start + nowa_pozycja) elif 'A' <= litera <= 'Z': start = ord('A') nowa_pozycja = (ord(litera) - start + klucz) % 26 zaszyfrowany_tekst += chr(start + nowa_pozycja) else: zaszyfrowany_tekst += litera return zaszyfrowany_tekst
+
+tekst_jawny = input("Podaj tekst do zaszyfrowania: ") przesuniecie = int(input("Podaj klucz przesunięcia (np. 3): ")) zaszyfrowany = szyfruj_cezara(tekst_jawny, przesuniecie) print("Zaszyfrowany tekst:", zaszyfrowany)
+
+Deszyfrowanie:
+
+odszyfrowany = szyfruj_cezara(zaszyfrowany, -przesuniecie)
+
+</pre>
+
+<footer>Przykład obiektowej implementacji szyfru Cezara w JS oraz odpowiednik w Pythonie</footer>
 
   </main>  <script>
     class CaesarCipher {
@@ -164,7 +187,6 @@
         const Z = 'Z'.charCodeAt(0);
         const a = 'a'.charCodeAt(0);
         const z = 'z'.charCodeAt(0);
-
         const code = ch.charCodeAt(0);
 
         if (code >= A && code <= Z) {
@@ -185,7 +207,6 @@
       }
     }
 
-    // Elementy DOM
     const inputText = document.getElementById('inputText');
     const shiftInput = document.getElementById('shift');
     const resultArea = document.getElementById('result');
