--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -16,6 +16,7 @@
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
 <tr><td></td><td><a href="20250902_zdarzenia.html">Zdarzenia</a></td></tr>
+<tr><td></td><td><a href="20250909_formularze.html"></a></td></tr>
             </table> 
         </div>
         <h2>Strony Internetowe</h2>
@@ -41,6 +42,8 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20250910_szyfrcezara2.html">Szyfr Cezara 2</a></td></tr>
+<tr><td></td><td><a href="20250910_szyfrcezara.html">Szyfr Cezara</a></td></tr>
             </table>
         </div>
     </div>
