Update and rename mediumemotik.html to 20250912_mediumemotik.html

--- a/20250912_mediumemotik.html
+++ b/20250912_mediumemotik.html
@@ -121,26 +121,52 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'🔌', pl:'Wtyczka', en:'Plug', others:['plugg', 'electric plug', 'wtyczkka']},
-  {emoji:'🧮', pl:'Liczydło', en:'Abacus', others:['abacus tool', 'abacus device', 'liczydlo']},
-  {emoji:'⚖️', pl:'Waga', en:'Scale', others:['scail', 'balance scale', 'waga']},
-  {emoji:'🛒', pl:'Wuzek na Zakupy', en:'Shopping Cart', others:['shoping cart', 'trolley', 'wuzek na zakupy']},
-  {emoji:'🏮', pl:'Lampion', en:'Lantern', others:['paper lamp', 'light lantern', 'Laterne']},
-  {emoji:'🧷', pl:'Agrafka', en:'Safety Pin', others:['pin', 'metal clasp', 'Sicherheitsnadel']},
-  {emoji:'🪢', pl:'Węzeł', en:'Knot', others:['rope tie', 'loop knot', 'Knoten']},
-  {emoji:'🧹', pl:'Miotła', en:'Broom', others:['brush', 'sweeper', 'Besen']},
-  {emoji:'🪒', pl:'Maszynka do Golenia', en:'Razor', others:['shaver', 'blade', 'Rasierer']},
-  {emoji:'🥼', pl:'Fartuch', en:'Apron', others:['white coat', 'Lab Coat', 'Kittel']},
-  {emoji:'🦺', pl:'Kamizelka Odblaskowa', en:'Safety Vest', others:['reflective vest', 'work vest', 'Warnweste']},
-  {emoji:'💄', pl:'Szminka', en:'Lipstick', others:['makeup', 'lip color', 'Lippenstift']},
-  {emoji:'🎒', pl:'Plecak', en:'Backpack', others:['rucksack', 'school bag', 'Rucksack']},
-  {emoji:'👝', pl:'Piórnik', en:'Pouch', others:['pencil case', 'small bag', 'Federmäppchen']},
-  {emoji:'👛', pl:'Portmonetka', en:'Purse', others:['coin purse', 'wallet', 'Geldbörse']},
-  {emoji:'👜', pl:'Torebka', en:'Handbag', others:['pocketbook', 'bag', 'Handtasche']},
-  {emoji:'🩴', pl:'Japonki', en:'Flip-Flops', others:['sandals', 'slippers', 'Flip-Flops', 'flip flops']},
-  {emoji:'🦯', pl:'Laska', en:'Cane', others:['walking stick', 'staff', 'Gehstock']}
+  {emoji:'💉', pl:'Strzykawka', en:'Syringe', others:['injection', 'needle', 'Spritze']},
+  {emoji:'💊', pl:'Tabletka', en:'Pill', others:['medicine', 'capsule', 'Tablette']},
+  {emoji:'🩹', pl:'Plaster', en:'Bandage', others:['adhesive bandage', 'patch', 'Pflaster']},
+  {emoji:'🩺', pl:'Stetoskop', en:'Stethoscope', others:['medical tool', 'listening device', 'Stethoskop']},
+  {emoji:'📡', pl:'Antena', en:'Antenna', others:['satellite dish', 'receiver', 'Antenne']},
+  {emoji:'🧯', pl:'Gaśnica', en:'Fire Extinguisher', others:['extinguisher', 'fire safety tool', 'Feuerlöscher']},
+  {emoji:'🪛', pl:'Śrubokręt', en:'Screwdriver', others:['tool', 'driver', 'Schraubenzieher']},
+  {emoji:'🪚', pl:'Piła', en:'Saw', others:['handsaw', 'cutter', 'Säge']},
+  {emoji:'🔨', pl:'Młotek', en:'Hammer', others:['mallet', 'tool', 'Hammer']},
+  {emoji:'⛏️', pl:'Kilof', en:'Pickaxe', others:['pick', 'miner’s tool', 'Spitzhacke']},
+  {emoji:'⚙️', pl:'Śróbka', en:'Gear', others:['cogwheel', 'mechanism', 'Zahnrad']},
+  {emoji:'✂️', pl:'Nożyczki', en:'Scissors', others:['shears', 'cutting tool', 'Schere']},
+  {emoji:'📐', pl:'Ekierka', en:'Setsquare', others:['set square', 'protractor', 'Geodreieck', 'Triangle Ruler']},
+  {emoji:'📰', pl:'Gazeta', en:'Newspaper', others:['journal', 'daily paper', 'Zeitung']},
+  {emoji:'🔎', pl:'Lupa', en:'Magnifying Glass', others:['lens', 'search tool', 'Lupe']},
+  {emoji:'⚰️', pl:'Trumna', en:'Coffin', others:['casket', 'bier', 'Sarg']},
+  {emoji:'🪦', pl:'Grób', en:'Grave', others:['tombstone', 'burial site', 'Grab']},
+  {emoji:'🚬', pl:'Papieros', en:'Cigarette', others:['smoke', 'cigarillo', 'Zigarette']},
+  {emoji:'🗡️', pl:'Miecz', en:'Dagger', others:['blade', 'knife', 'Dolch']},
+  {emoji:'🪤', pl:'Pułapka', en:'Mouse Trap', others:['trap', 'snare', 'Falle']},
+  {emoji:'🛡️', pl:'Tarcza', en:'Shield', others:['armor', 'protector', 'Schild']},
+  {emoji:'🔒', pl:'Kłódka', en:'Lock', others:['padlock', 'secure lock', 'Schloss']},
      ],
      medium:[
+  {emoji:'🗑️', pl:'Kosz', en:'Trash Bin', others:['garbage can', 'wastebasket', 'Mülleimer', 'bin']},
+  {emoji:'🛎️', pl:'Dzwonek', en:'Bellhop Bell', others:['service bell', 'counter bell', 'Glocke']},
+  {emoji:'🔔', pl:'Dzwon', en:'Bell', others:['church bell', 'ringer', 'Glocke']},
+  {emoji:'📏', pl:'Linijka', en:'Ruler', others:['straightedge', 'measuring stick', 'Lineal']},
+  {emoji:'📅', pl:'Kalendarz', en:'Calendar', others:['planner', 'agenda', 'Kalender']},
+  {emoji:'💣', pl:'Bomba', en:'Bomb', others:['explosive', 'grenade', 'Bombe']},
+  {emoji:'📦', pl:'Karton', en:'Box', others:['package', 'parcel', 'Karton']},
+  {emoji:'🪓', pl:'Siekiera', en:'Axe', others:['hatchet', 'chopper', 'Axt']},
+  {emoji:'🪜', pl:'Drabinka', en:'Ladder', others:['step ladder', 'stairs', 'Leiter']},
+  {emoji:'🪣', pl:'Wiaderko', en:'Bucket', others:['pail', 'container', 'Eimer']},
+  {emoji:'🪝', pl:'Hak', en:'Hook', others:['fishing hook', 'hanger', 'Haken']},
+  {emoji:'🧲', pl:'Magnes', en:'Magnet', others:['lodestone', 'attractor', 'Magnet']},
+  {emoji:'🛰️', pl:'Satelita', en:'Satellite', others:['spacecraft', 'orbiter', 'Satellit']},
+  {emoji:'🔭', pl:'Teleskop', en:'Telescope', others:['scope', 'astronomy tool', 'Teleskop']},
+  {emoji:'🔬', pl:'Mikroskop', en:'Microscope', others:['lab tool', 'magnifier', 'Mikroskop']},
+  {emoji:'👝', pl:'Piórnik', en:'Pouch', others:['pencil case', 'small bag', 'Federmäppchen']},
+  {emoji:'👛', pl:'Portmonetka', en:'Purse', others:['coin purse', 'wallet', 'Geldbörse']},
+  {emoji:'🥽', pl:'Gogle', en:'Goggles', others:['protective glasses', 'safety goggles', 'Schutzbrille']},
+     ],
+     hard:[
+  {emoji:'🔑', pl:'Klucz', en:'Key', others:['door key', 'passkey', 'Schlüssel']},
+  {emoji:'📂', pl:'Folder', en:'Folder', others:['file', 'directory', 'Ordner']},
   {emoji:'🥾', pl:'But', en:'Boot', others:['hiking boot', 'work boot', 'Stiefel']},
   {emoji:'👢', pl:'Kalosze', en:'Boots', others:['rain boots', 'wellies', 'Gummistiefel', 'boot']},
   {emoji:'💰', pl:'Worek z Pieniędzmi', en:'Money Bag', others:['moneybag', 'sack of money', 'worek z pieniedzmi']},
@@ -156,9 +182,22 @@
   {emoji:'🎽', pl:'Koszulka bez Rękawów', en:'Tank Top', others:['jersey', 'sleeveless shirt', 'Trikot']},
   {emoji:'👔', pl:'Krawat', en:'Tie', others:['necktie', 'cravat', 'Krawatte', 'suit']},
   {emoji:'🩳', pl:'Kąpielówki', en:'Shorts', others:['swim trunks', 'swim shorts', 'Badehose']},
-  {emoji:'🥽', pl:'Gogle', en:'Goggles', others:['protective glasses', 'safety goggles', 'Schutzbrille']},
-     ],
-     hard:[
+  {emoji:'👜', pl:'Torebka', en:'Handbag', others:['pocketbook', 'bag', 'Handtasche']},
+  {emoji:'🩴', pl:'Japonki', en:'Flip-Flops', others:['sandals', 'slippers', 'Flip-Flops', 'flip flops']},
+  {emoji:'🦯', pl:'Laska', en:'Cane', others:['walking stick', 'staff', 'Gehstock']},
+  {emoji:'🔌', pl:'Wtyczka', en:'Plug', others:['plugg', 'electric plug', 'wtyczkka']},
+  {emoji:'🧮', pl:'Liczydło', en:'Abacus', others:['abacus tool', 'abacus device', 'liczydlo']},
+  {emoji:'⚖️', pl:'Waga', en:'Scale', others:['scail', 'balance scale', 'waga']},
+  {emoji:'🛒', pl:'Wuzek na Zakupy', en:'Shopping Cart', others:['shoping cart', 'trolley', 'wuzek na zakupy']},
+  {emoji:'🏮', pl:'Lampion', en:'Lantern', others:['paper lamp', 'light lantern', 'Laterne']},
+  {emoji:'🧷', pl:'Agrafka', en:'Safety Pin', others:['pin', 'metal clasp', 'Sicherheitsnadel']},
+  {emoji:'🪢', pl:'Węzeł', en:'Knot', others:['rope tie', 'loop knot', 'Knoten']},
+  {emoji:'🧹', pl:'Miotła', en:'Broom', others:['brush', 'sweeper', 'Besen']},
+  {emoji:'🪒', pl:'Maszynka do Golenia', en:'Razor', others:['shaver', 'blade', 'Rasierer']},
+  {emoji:'🥼', pl:'Fartuch', en:'Apron', others:['white coat', 'Lab Coat', 'Kittel']},
+  {emoji:'🦺', pl:'Kamizelka Odblaskowa', en:'Safety Vest', others:['reflective vest', 'work vest', 'Warnweste']},
+  {emoji:'💄', pl:'Szminka', en:'Lipstick', others:['makeup', 'lip color', 'Lippenstift']},
+  {emoji:'🎒', pl:'Plecak', en:'Backpack', others:['rucksack', 'school bag', 'Rucksack']},
   {emoji:'👗', pl:'Sukienka', en:'Dress', others:['gown', 'frock', 'Kleid']},
   {emoji:'🕶️', pl:'Okulary Przeciwsłoneczne', en:'Sunglasses', others:['shades', 'dark glasses', 'Sonnenbrille']},
   {emoji:'👒', pl:'Kapelusz', en:'Hat', others:['sunhat', 'wide-brim hat', 'Hut']},
