--- a/20250831_dawid.html
+++ b/20250831_dawid.html
@@ -20,7 +20,7 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756998192/szkolaklasa3_skhhhs.png" alt="Szkoła 3">
                 <span>Szkoła 3</span>
             </a>
-            <a href="mediumemotik.html" class="app-icon">
+            <a href="20250912_mediumemotik.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
                 <span>Emotki</span>
             </a>
