--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250912_mediumemotik.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
+                <span>Emotki</span>
+            </a>
             <a href="20250908_pozytywizm.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1757358985/pozytywizm_bpgemq.png" alt="Pozytywizm">
                 <span>Pozytywizm</span>
@@ -203,10 +207,6 @@
             <a href="julka.html" class="app-icon">
                 <img src="20250813_julka.png" alt="Julka">
                 <span>Julka</span>
-            </a>
-            <a href="mediumemotik.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
-                <span>Emotki</span>
             </a>
             <a href="testy.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1756566447/testy_admuel.png" alt="Testy">
