--- a/20250731_inne.html
+++ b/20250731_inne.html
@@ -16,7 +16,7 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753960384/oderaamadrea_v7klhv.png" alt="Madera">
                 <span>Madera</span>
             </a>
-            <a href="https://maps.app.goo.gl/gqxci1RUh4NY5cvH8?g_st=ac" class="app-icon">
+            <a href="inne.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753961061/mapamadera_vlmqoc.png" alt="Mapa">
                 <span>Mapa</span>
             </a>
@@ -32,15 +32,15 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
                 <span>Kółko i Krzyżyk</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250703_norwegia.html" class="app-icon">
+            <a href="20250703_norwegia.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752341895/dofiordownorwegii_gnos2l.png" alt="Norwegia">
                 <span>Norwegia</span>
             </a>
-            <a href="https://dawid108.github.io/gustowskidawid/angielski.html" class="app-icon">
+            <a href="inne.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1752604207/jezykangielskinauka_zkuudx.png" alt="Angielski">
                 <span>Angielski</span>
             </a>
-            <a href="https://dawid108.github.io/dawi108/20250730_polskaobjazdowka.html" class="app-icon">
+            <a href="20250730_polskaobjazdowka.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1753873280/poslaobjazdowa_st2jct.png" alt="Polska Objazdówka">
                 <span>Polska</span>
             </a>
