--- a/20250912_mediumemotik.html
+++ b/20250912_mediumemotik.html
@@ -122,36 +122,34 @@
     const EMOJI_BANK = {
      easy: [
   {emoji:'💉', pl:'Strzykawka', en:'Syringe', others:['injection', 'needle', 'Spritze']},
-  {emoji:'💊', pl:'Tabletka', en:'Pill', others:['medicine', 'capsule', 'Tablette']},
-  {emoji:'🩹', pl:'Plaster', en:'Bandage', others:['adhesive bandage', 'patch', 'Pflaster']},
-  {emoji:'🩺', pl:'Stetoskop', en:'Stethoscope', others:['medical tool', 'listening device', 'Stethoskop']},
-  {emoji:'📡', pl:'Antena', en:'Antenna', others:['satellite dish', 'receiver', 'Antenne']},
   {emoji:'🧯', pl:'Gaśnica', en:'Fire Extinguisher', others:['extinguisher', 'fire safety tool', 'Feuerlöscher']},
   {emoji:'🪛', pl:'Śrubokręt', en:'Screwdriver', others:['tool', 'driver', 'Schraubenzieher']},
-  {emoji:'🪚', pl:'Piła', en:'Saw', others:['handsaw', 'cutter', 'Säge']},
-  {emoji:'🔨', pl:'Młotek', en:'Hammer', others:['mallet', 'tool', 'Hammer']},
-  {emoji:'⛏️', pl:'Kilof', en:'Pickaxe', others:['pick', 'miner’s tool', 'Spitzhacke']},
-  {emoji:'⚙️', pl:'Śróbka', en:'Gear', others:['cogwheel', 'mechanism', 'Zahnrad']},
-  {emoji:'✂️', pl:'Nożyczki', en:'Scissors', others:['shears', 'cutting tool', 'Schere']},
-  {emoji:'📐', pl:'Ekierka', en:'Setsquare', others:['set square', 'protractor', 'Geodreieck', 'Triangle Ruler']},
-  {emoji:'📰', pl:'Gazeta', en:'Newspaper', others:['journal', 'daily paper', 'Zeitung']},
   {emoji:'🔎', pl:'Lupa', en:'Magnifying Glass', others:['lens', 'search tool', 'Lupe']},
-  {emoji:'⚰️', pl:'Trumna', en:'Coffin', others:['casket', 'bier', 'Sarg']},
-  {emoji:'🪦', pl:'Grób', en:'Grave', others:['tombstone', 'burial site', 'Grab']},
+     ],
+     medium:[
   {emoji:'🚬', pl:'Papieros', en:'Cigarette', others:['smoke', 'cigarillo', 'Zigarette']},
   {emoji:'🗡️', pl:'Miecz', en:'Dagger', others:['blade', 'knife', 'Dolch']},
   {emoji:'🪤', pl:'Pułapka', en:'Mouse Trap', others:['trap', 'snare', 'Falle']},
   {emoji:'🛡️', pl:'Tarcza', en:'Shield', others:['armor', 'protector', 'Schild']},
   {emoji:'🔒', pl:'Kłódka', en:'Lock', others:['padlock', 'secure lock', 'Schloss']},
-     ],
-     medium:[
+  {emoji:'⚰️', pl:'Trumna', en:'Coffin', others:['casket', 'bier', 'Sarg']},
+  {emoji:'🪦', pl:'Grób', en:'Grave', others:['tombstone', 'burial site', 'Grab']},
+  {emoji:'📰', pl:'Gazeta', en:'Newspaper', others:['journal', 'daily paper', 'Zeitung']},
+  {emoji:'⚙️', pl:'Śróbka', en:'Gear', others:['cogwheel', 'mechanism', 'Zahnrad']},
+  {emoji:'✂️', pl:'Nożyczki', en:'Scissors', others:['shears', 'cutting tool', 'Schere']},
+  {emoji:'📐', pl:'Ekierka', en:'Setsquare', others:['set square', 'protractor', 'Geodreieck', 'Triangle Ruler']},
+  {emoji:'⛏️', pl:'Kilof', en:'Pickaxe', others:['pick', 'miner’s tool', 'Spitzhacke']},
+  {emoji:'🔨', pl:'Młotek', en:'Hammer', others:['mallet', 'tool', 'Hammer']},
+  {emoji:'🪚', pl:'Piła', en:'Saw', others:['handsaw', 'cutter', 'Säge']},
+  {emoji:'🩹', pl:'Plaster', en:'Bandage', others:['adhesive bandage', 'patch', 'Pflaster']},
+  {emoji:'🩺', pl:'Stetoskop', en:'Stethoscope', others:['medical tool', 'listening device', 'Stethoskop']},
+  {emoji:'📡', pl:'Antena', en:'Antenna', others:['satellite dish', 'receiver', 'Antenne']},
+  {emoji:'💊', pl:'Tabletka', en:'Pill', others:['medicine', 'capsule', 'Tablette']},
   {emoji:'🗑️', pl:'Kosz', en:'Trash Bin', others:['garbage can', 'wastebasket', 'Mülleimer', 'bin']},
   {emoji:'🛎️', pl:'Dzwonek', en:'Bellhop Bell', others:['service bell', 'counter bell', 'Glocke']},
   {emoji:'🔔', pl:'Dzwon', en:'Bell', others:['church bell', 'ringer', 'Glocke']},
-  {emoji:'📏', pl:'Linijka', en:'Ruler', others:['straightedge', 'measuring stick', 'Lineal']},
   {emoji:'📅', pl:'Kalendarz', en:'Calendar', others:['planner', 'agenda', 'Kalender']},
   {emoji:'💣', pl:'Bomba', en:'Bomb', others:['explosive', 'grenade', 'Bombe']},
-  {emoji:'📦', pl:'Karton', en:'Box', others:['package', 'parcel', 'Karton']},
   {emoji:'🪓', pl:'Siekiera', en:'Axe', others:['hatchet', 'chopper', 'Axt']},
   {emoji:'🪜', pl:'Drabinka', en:'Ladder', others:['step ladder', 'stairs', 'Leiter']},
   {emoji:'🪣', pl:'Wiaderko', en:'Bucket', others:['pail', 'container', 'Eimer']},
@@ -163,8 +161,11 @@
   {emoji:'👝', pl:'Piórnik', en:'Pouch', others:['pencil case', 'small bag', 'Federmäppchen']},
   {emoji:'👛', pl:'Portmonetka', en:'Purse', others:['coin purse', 'wallet', 'Geldbörse']},
   {emoji:'🥽', pl:'Gogle', en:'Goggles', others:['protective glasses', 'safety goggles', 'Schutzbrille']},
+  {emoji:'🪠', pl:'Przepychacz do Rur', en:'Plunger', others:['toilet plunger', 'pipe cleaner', 'Pömpel']},
      ],
      hard:[
+  {emoji:'📏', pl:'Linijka', en:'Ruler', others:['straightedge', 'measuring stick', 'Lineal']},
+  {emoji:'📦', pl:'Karton', en:'Box', others:['package', 'parcel', 'Karton']},
   {emoji:'🔑', pl:'Klucz', en:'Key', others:['door key', 'passkey', 'Schlüssel']},
   {emoji:'📂', pl:'Folder', en:'Folder', others:['file', 'directory', 'Ordner']},
   {emoji:'🥾', pl:'But', en:'Boot', others:['hiking boot', 'work boot', 'Stiefel']},
@@ -205,19 +206,18 @@
   {emoji:'💡', pl:'Żarówka', en:'Light Bulb', others:['lightbulb', 'bulb lamp', 'zarowka', 'bulb']},
   {emoji:'🔦', pl:'Latarka', en:'Flashlight', others:['flashlite', 'torch', 'latarka']},
   {emoji:'🧱', pl:'Cegła', en:'Brick', others:['stone block', 'building brick', 'Ziegel']},
-  {emoji:'🪠', pl:'Przepychacz do Rur', en:'Plunger', others:['toilet plunger', 'pipe cleaner', 'Pömpel']},
   {emoji:'🧸', pl:'Pluszowy Miś', en:'Teddy Bear', others:['stuffed bear', 'plush toy', 'Teddybär']},
   {emoji:'🩲', pl:'Majtki', en:'Underwear', others:['briefs', 'panties', 'Unterhose']},
   {emoji:'🎓', pl:'Czapka Dyplomowa', en:'Graduation Cap', others:['mortarboard', 'academic cap', 'Absolventenhut', 'cap']},
   {emoji:'👑', pl:'Korona', en:'Crown', others:['tiara', 'royal crown', 'Krone']},
   {emoji:'💍', pl:'Pierścionek', en:'Ring', others:['wedding ring', 'band', 'Ring']},
-  {emoji:'👠', pl:'Szpilki', en:'High Heels', others:['stilettos', 'heels', 'High Heels']},
+  {emoji:'👠', pl:'Szpilki', en:'High Heels', others:['stilettos', 'heels', 'High Heels', 'high heeled shoes']},
   {emoji:'👟', pl:'But', en:'Sneaker', others:['running shoe', 'trainer', 'Turnschuh']},
   {emoji:'🕯️', pl:'Świeczka', en:'Candle', others:['canddle', 'wax candle', 'swieczka']},
   {emoji:'👓', pl:'Okulary', en:'Glasses', others:['spectacles', 'eyewear', 'Brille']},
   {emoji:'🧢', pl:'Czapka', en:'Cap', others:['baseball cap', 'snapback', 'Mütze']},
   {emoji:'⛑️', pl:'Hełm Strażacki', en:'Rescue Helmet', others:['fire helmet', 'safety helmet', 'Rettungshelm', 'helmet']},
-  {emoji:'🪖', pl:'Hełm Wojskowy', en:'Military Helmet', others:['army helmet', 'combat helmet', 'Militärhelm']},
+  {emoji:'🪖', pl:'Hełm Wojskowy', en:'Military Helmet', others:['army helmet', 'combat helmet', 'Militärhelm', 'helmet']},
   {emoji:'🧥', pl:'Płaszcz', en:'Coat', others:['jacket', 'overcoat', 'Mantel']},
   {emoji:'👕', pl:'Koszulka', en:'T-Shirt', others:['tee', 'shirt', 'T-Shirt']},
   {emoji:'🧼', pl:'Mydło', en:'Soap', others:['bar soap', 'cleanser', 'Seife']},
