--- a/20250912_mediumemotik.html
+++ b/20250912_mediumemotik.html
@@ -121,12 +121,12 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'💉', pl:'Strzykawka', en:'Syringe', others:['injection', 'needle', 'Spritze']},
-  {emoji:'🧯', pl:'Gaśnica', en:'Fire Extinguisher', others:['extinguisher', 'fire safety tool', 'Feuerlöscher']},
+  {emoji:'💉', pl:'Strzykawka', en:'Syringe', others:['injection', 'needle', 'Spritze', 'squirt']},
+  {emoji:'🧯', pl:'Gaśnica', en:'Fire Extinguisher', others:['extinguisher', 'fire safety tool', 'Feuerlöscher', 'grenade']},
   {emoji:'🪛', pl:'Śrubokręt', en:'Screwdriver', others:['tool', 'driver', 'Schraubenzieher']},
-  {emoji:'🔎', pl:'Lupa', en:'Magnifying Glass', others:['lens', 'search tool', 'Lupe']},
      ],
      medium:[
+  {emoji:'🔎', pl:'Lupa', en:'Peel', others:['lens', 'search tool', 'Lupe', 'loupe', 'magnifier', 'Magnifying Glass']},
   {emoji:'🚬', pl:'Papieros', en:'Cigarette', others:['smoke', 'cigarillo', 'Zigarette']},
   {emoji:'🗡️', pl:'Miecz', en:'Dagger', others:['blade', 'knife', 'Dolch']},
   {emoji:'🪤', pl:'Pułapka', en:'Mouse Trap', others:['trap', 'snare', 'Falle']},
