--- a/20250908_pozytywizm.html
+++ b/20250908_pozytywizm.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Pozytywizm — Zeszyt</title>
+  <title>Pozytywizm</title>
   <style>
     :root{
       --bg:#fbfbfd; --card:#ffffff; --accent:#2b7a78; --muted:#6b6b6b; --glass: rgba(43,122,120,0.06);
@@ -191,28 +191,77 @@
         date: '2025-09-09',
         topic: 'Problem antysemityzmu w literaturze II połowy XIX w.',
         note: `
-  <ol>
-    <li><strong>Pojęcia:</strong></li>
-  </ol>
+    <ol>
+        <li><strong>Pojęcia:</strong>
+            <ol type="a">
+                <li><strong><em>Antysemityzm</em></strong> oznaczał niechęć, wrogość lub uprzedzenia wobec Żydów, która była wtedy mocno widoczna w społeczeństwie polskim i europejskim.</li>
+                <li><strong><em>Asymilacja Żydów</em></strong> – przystosowanie i stworzenie warunków do życia dla ludności żydowskiej poprzez włączenie jej do społeczeństwa polskiego z zachowaniem odrębności kulturowej i religijnej.</li>
+            </ol>
+        </li>
+
+        <li><strong>Nowela jako gatunek literacki:</strong>
+            <ul>
+                <li>Utwór epicki pisany prozą,</li>
+                <li>Krótki i zwarty utwór,</li>
+                <li>Jednowątkowość,</li>
+                <li>Niewielka liczba bohaterów,</li>
+                <li><em>Narrator trzecioosobowy wszechwiedzący</em>,</li>
+                <li>Ścisła kompozycja – rygorystyczna budowa, zwykle: ekspozycja (wprowadzenie), zawiązanie akcji, rozwinięcie, punkt kulminacyjny, rozwiązanie akcji (puenta),</li>
+                <li>Zwięzłość i brak dygresji,</li>
+                <li>Puenta,</li>
+                <li>Funkcja dydaktyczna lub moralna.</li>
+            </ul>
+        </li>
+
+        <li><strong>Geneza noweli "Mendel Gdański" oraz kontekst historyczny:</strong><br>
+            Nowela powstaje w 1890 roku na proźbę Elizy Orzeszkowej, kiedy w Polsce wzrastają ruchy <em>antysemickie</em>, a Konopnicka apeluje do Polaków o <em>asymilację</em> z ludnością żydowską.
+        </li>
+
+        <li><strong>Treść noweli "Mendel Gdański" (fragmenty):</strong>
+            <ol type="a">
+                <li><em>Scharakteryzuj bohaterów występujących we fragmencie:</em>
+                    <ul>
+                        <li><strong>Mendel Gdański</strong> jest starym Żydem, który od wielu lat mieszka i pracuje w mieście – czuje się jego częścią. Jest pracowity i uczciwy, podkreśla, że wszystko zdobył własnymi rękami. To człowiek odważny i dumny, który staje w oknie naprzeciw rozwścieczonego tłumu, broniąc swej godności.</li>
+                        <li><strong>Gruby Zegarmistrz</strong> jest sąsiadem Mendla, od wielu lat go zna. Przynosi niepokojącą wieść, że „Żydów mają bić”, mówiąc o tym z pewną lekkością i obojętnością. Choć nie jest agresywny, jego słowa ujawniają stereotypy i brak głębszego współczucia wobec Żydów.</li>
+                        <li><strong>Kubuś</strong> jest wnukiem Mendla, uczącym się pilnie w izbie. Jest bezbronny i niewinny, a tłum uderza właśnie w niego – kamień trafia go w głowę. Symbolizuje przyszłość i nadzieję, ale też pokazuje bezlitosne okrucieństwo napastników.</li>
+                        <li><strong>Tłum</strong> jest dziki, pijany i brutalny – działa w sposób bezmyślny i okrutny. Nie kieruje się sprawiedliwością, lecz ślepą nienawiścią – atakuje wszystkich Żydów tylko za to, że są Żydami. Zamiast szacunku dla odwagi Mendla, tłum odczytuje jego postawę jako urągowisko i reaguje jeszcze większą agresją.</li>
+                        <li><strong>Kobiety</strong> są bardziej wrażliwe i litościwe niż reszta tłumu. Gdy widzą Mendla w oknie z wnukiem, zaczynają płakać. Wzruszają się także losem rannego Kubusia, rzucając się ku niemu, co pokazuje ich współczucie i instynkt macierzyński.</li>
+                    </ul>
+                </li>
+                <li><em>Opisz stosunek Polaków do Żydów:</em>
+                    <ul>
+                        <li><strong>Gruby zegarmistrz do starego Mendla:</strong><br>
+                            Zegarmistrz zna Mendla od lat, ale mimo tego uważa, że Żydzi zasługują na pobicie tylko za to, że są Żydami.<br>
+                            Mówi o tym lekko i obojętnie, jakby była to zwykła wiadomość, bez poczucia niesprawiedliwości.<br>
+                            Traktuje Mendla jako obcego, mimo że ten podkreśla, iż całe życie uczciwie pracował i czuje się częścią miasta.
+                        </li>
+                        <li><strong>Kobiety do starego Mendla i jego wnuka Kubusia:</strong><br>
+                            Gdy widzą Mendla i Kubusia w oknie, ogarnia je wzruszenie – reagują płaczem.<br>
+                            Gdy Kubuś zostaje trafiony kamieniem, kobiety natychmiast biegną mu na pomoc.<br>
+                            W przeciwieństwie do reszty tłumu, okazują współczucie i ludzką solidarność.
+                        </li>
+                        <li><strong>Tłum na ulicy do starego Mendla i Kubusia:</strong><br>
+                            Tłum jest pełen nienawiści – atakuje Mendla tylko dlatego, że jest Żydem.<br>
+                            Nie oszczędza nawet niewinnego dziecka – kamień trafia w głowę Kubusia.<br>
+                            Odczytuje odważną postawę Mendla nie jako apel do człowieczeństwa, lecz jako zniewagę, co wyzwala jeszcze większą agresję.
+                        </li>
+                    </ul>
+                </li>
+            </ol>
+        </li>
+
+        <li><strong>Puenta noweli:</strong><br>
+            Konopnicka ukazując drastyczną scenę ataku Polaków na Żyda i jego wnuka podkreśla, że <strong><em>antysemityzm</em></strong> prowadzi do nienawiści i agresji i woła o <em>asymilację</em> Polaków i Żydów, równe traktowanie i niedzielenie ludzi tylko ze względu na pochodzenie. Stary Mendel powiedział Zegarmistrzowi, że ludzi można podzielić tylko na <strong><em>dobrych i złych</em></strong>.
+        </li>
+    </ol>
         `
       },
       {
-        category: 'Lekcje',
-        date: '2025-09-09',
-        topic: 'Język i styl w pozytywizmie',
+        category: 'Zeszyt, Lekcje',
+        date: '2025-09-15',
+        topic: '„Lalka" Bolesława Prusa - wiadomości wprowadzające',
         note: `
-          <p>Charakterystyka języka:</p>
-          <ol>
-            <li>jasny i komunikatywny;</li>
-            <li>użycie środków realistycznych;</li>
-            <li>częste opisy społeczne i dokumentalne.</li>
-          </ol>
-          <p>Przykład tabelaryczny:</p>
-          <table>
-            <tr><th>Cecha</th><th>Przykład</th></tr>
-            <tr><td>Realizm</td><td>Opis pracy wiejskiej</td></tr>
-            <tr><td>Intencja edukacyjna</td><td>Prace o reformie</td></tr>
-          </table>
+
         `
       }
     ];
